# yaml-sort

./: README.md  _yaml-sort  entry_points.cfg  sample1.yml  sample2.yml  setup.cfg  yaml-sort.py
yaml_sort/: __init__.py  yaml_sort.py
