[metadata]
name = yaml-sort
version = 0.0.1
description = yaml-sort: yaml file sorting command
url = 
author = 
author_email = 
license = MIT
long_description = file: README.md

[options]
zip_safe = False
install_requires = PyYAML
packages = find:
entry_points = file: entry_points.cfg

[options.packages.find]
exclude = tests; examples
